# ryanhub

./: .gitignore  CLAUDE.md  STRATEGY.md  paper-data.md  project.yml
CortexApp.xcodeproj/: project.pbxproj
RyanHub/: Info.plist  RyanHub.entitlements
RyanHub.xcodeproj/: project.pbxproj
RyanHubTests/: ChatMessageDedupeTests.swift
RyanHubUITests/: AgenticExplorer.swift  BookFactoryTests.swift  CalendarTests.swift  ChatTests.swift  CrossModuleTests.swift  FluentTests.swift  HealthTests.swift  ParkingTests.swift  RyanHubUITestBase.swift  SettingsTests.swift  TabNavigationTests.swift  TerminalTests.swift  ToolkitTests.swift
RyanHubWatch/: ContentView.swift  Info.plist  RyanHubWatchApp.swift  WatchAudioStreamer.swift
docs/: bobo-timeline-data-processing.md  bobo-timeline-sample-2026-03-02.json  (+2 more)
services/dispatcher/: LICENSE  README.md  config.example.yaml  pyproject.toml
services/dispatcher/dispatcher/: __init__.py  classifier.py  cli.py  config.py  core.py  memory.py  openclaw_relay.py  personal_context.py  popo_brain.py  runner.py  session.py  telegram.py  transcript.py  ws_server.py
services/dispatcher/docs/: index.html
services/dispatcher/scripts/: claude-sidecar.mjs  install-macos.sh  package-lock.json  package.json
services/dispatcher/tests/: classifier_behavior_log.json  e2e_routing_log.json  test_classifier_behavior.py  test_complex_tasks.py  test_comprehensive.py  test_config.py  test_dispatch_patterns.py  test_e2e.py  test_e2e_routing.py  test_parallel_context.py  test_real_claude.py  test_stream_reading.py  test_two_phase_summarization.py
(+597 files in other folders)
